--- a/05-dashboard/index.html
+++ b/05-dashboard/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deceptions Analysis with SAE Encoders - Taras & Sigurd</title>
+    <title>Analysis Dashboard</title>
     <style>
-        /* Reset and base styles */
         * {
             margin: 0;
             padding: 0;
@@ -18,17 +17,34 @@
             padding: 20px;
         }
 
-        /* Dashboard container */
         .dashboard {
             width: 100%;
             max-width: 2400px;
             margin: 0 auto;
         }
 
-        /* Grid layout */
-        .grid {
+        /* Row styling */
+        .row {
+            margin-bottom: 20px;
+        }
+        /* Grid layouts */
+        .grid-2-col {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
+            grid-template-columns: repeat(2, 1fr);
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .grid-3-col {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .grid-4-col {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
             gap: 20px;
             margin-top: 20px;
         }
@@ -45,6 +61,9 @@
             margin-bottom: 10px;
             padding-bottom: 10px;
             border-bottom: 1px solid #eee;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
         .panel-title {
@@ -53,15 +72,23 @@
             color: #333;
         }
 
-        /* iframe container with aspect ratio */
-        .iframe-container {
+        /* iframe containers with different aspect ratios */
+        .iframe-container-large {
             position: relative;
             width: 100%;
             padding-top: 241.67%; /* 2900px/1200px = 241.67% */
             overflow: hidden;
         }
 
-        .iframe-container iframe {
+        .iframe-container-small {
+            position: relative;
+            width: 100%;
+            padding-top: 100%; /* Square aspect ratio for smaller plots */
+            overflow: hidden;
+        }
+
+        .iframe-container-large iframe,
+        .iframe-container-small iframe {
             position: absolute;
             top: 0;
             left: 0;
@@ -69,33 +96,101 @@
             height: 100%;
             border: none;
         }
+
+        /* Responsive adjustments */
+        @media (max-width: 1200px) {
+            .grid-3-col {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+
+        @media (max-width: 768px) {
+            .grid-2-col,
+            .grid-3-col {
+                grid-template-columns: 1fr;
+            }
+        }
+
+        /* Section headers */
+        .section-header {
+            margin: 30px 0 15px 0;
+            color: #444;
+            border-bottom: 2px solid #ddd;
+            padding-bottom: 10px;
+        }
     </style>
 </head>
 <body>
     <div class="dashboard">
-        <h1>Deceptions Analysis with SAE Encoders - Taras & Sigurd</h1>
-        <br><br>
+        <h1>Analysis Dashboard</h1>
 
-        <h2>SFC Important Nodes</h2>
-        <div class="grid">
-            <!-- Deceptive Threshold Panel -->
-            <div class="panel">
-                <div class="panel-header">
-                    <h2 class="panel-title">Deceptive Threshold Analysis</h2>
+        <!-- First row with two large plots -->
+        <h2 class="section-header">Main Analysis</h2>
+        <div class="row">
+            <div class="grid-2-col">
+                <!-- Deceptive Threshold Panel -->
+                <div class="panel">
+                    <div class="panel-header">
+                        <h2 class="panel-title">Deceptive Threshold Analysis</h2>
+                    </div>
+                    <div class="iframe-container-large">
+                        <iframe src="deceptive__threshold_0.02_percentile_20.html" title="Deceptive Threshold Analysis"></iframe>
+                    </div>
                 </div>
-                <div class="iframe-container">
-                    <iframe src="deceptive__threshold_0.02_percentile_20.html" title="Deceptive Threshold Analysis"></iframe>
+
+                <!-- Truthful Nodes Panel -->
+                <div class="panel">
+                    <div class="panel-header">
+                        <h2 class="panel-title">Truthful Nodes Analysis</h2>
+                    </div>
+                    <div class="iframe-container-large">
+                        <iframe src="truthful_nodes__threshold_0.02_percentile_20.html" title="Truthful Nodes Analysis"></iframe>
+                    </div>
                 </div>
             </div>
+        </div>
 
-            <!-- Truthful Nodes Panel -->
-            <div class="panel">
-                <div class="panel-header">
-                    <h2 class="panel-title">Truthful Nodes Analysis</h2>
+        <!-- Second row with three smaller plots -->
+        <h2 class="section-header">Additional Metrics</h2>
+        <div class="row">
+            <div class="grid-4-col">
+                <!-- Additional Plot 1 -->
+                <div class="panel">
+                    <div class="panel-header">
+                        <h2 class="panel-title">Additional Plot 1</h2>
+                    </div>
+                    <div class="iframe-container-small">
+                        <iframe src="additional_plot1.html" title="Additional Plot 1"></iframe>
+                    </div>
                 </div>
-                <div class="iframe-container">
-                    <iframe src="truthful_nodes__threshold_0.02_percentile_20.html" title="Truthful Nodes Analysis"></iframe>
+
+                <!-- Additional Plot 2 -->
+                <div class="panel">
+                    <div class="panel-header">
+                        <h2 class="panel-title">Additional Plot 2</h2>
+                    </div>
+                    <div class="iframe-container-small">
+                        <iframe src="additional_plot2.html" title="Additional Plot 2"></iframe>
+                    </div>
                 </div>
+                <!-- Additional Plot 3 -->
+                <div class="panel">
+                    <div class="panel-header">
+                        <h2 class="panel-title">Additional Plot 3</h2>
+                    </div>
+                    <div class="iframe-container-small">
+                        <iframe src="additional_plot3.html" title="Additional Plot 3"></iframe>
+                    </div>
+                </div>
+                <!-- Additional Plot 4 -->
+                <div class="panel">
+                    <div class="panel-header">
+                        <h2 class="panel-title">Additional Plot 3</h2>
+                    </div>
+                    <div class="iframe-container-small">
+                        <iframe src="additional_plot3.html" title="Additional Plot 3"></iframe>
+                    </div>
+                </div>          
             </div>
         </div>
     </div>
