Extention of Dashboards.

--- a/05-dashboard/index.html
+++ b/05-dashboard/index.html
@@ -193,6 +193,31 @@
                 </div>          
             </div>
         </div>
+            <!-- Third row with three smaller plots -->
+            <h2 class="section-header">Neuronpedia</h2>
+            <div class="row">
+                <div class="grid-2-col">
+                    <!-- Additional Plot 1 -->
+                    <div class="panel">
+                        <div class="panel-header">
+                            <h2 class="panel-title">Items related to deception and dishonesty</h2>
+                        </div>
+                        <div class="iframe-container-small">
+                            <iframe src="https://neuronpedia.org/gemma-2-9b/18-gemmascope-res-16k/8671?embed=true&embedexplanation=true&embedplots=true&embedtest=true&height=300" title="Additional Plot 1"></iframe>
+                        </div>
+                    </div>
+    
+                    <!-- Additional Plot 2 -->
+                    <div class="panel">
+                        <div class="panel-header">
+                            <h2 class="panel-title">Items related to false information or deception</h2>
+                        </div>
+                        <div class="iframe-container-small">
+                            <iframe src="https://neuronpedia.org/gemma-2-9b/28-gemmascope-res-16k/4498?embed=true&embedexplanation=true&embedplots=true&embedtest=true&height=300" title="Additional Plot 2"></iframe>
+                        </div>
+                    </div>
+  
+            </div>
     </div>
 </body>
 </html>
